MDEV-36720 Possible memory leak on updating table with index without overlaps

when closing a lookup_handler, don't forget to close it in PSI too